--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/node": "20.5.7",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
+    "@types/uuid": "^9.0.2",
     "autoprefixer": "10.4.15",
     "aws-amplify": "^5.3.10",
     "aws-crt": "^1.18.0",
