--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "autoprefixer": "10.4.15",
     "aws-amplify": "^5.3.10",
     "aws-crt": "^1.18.0",
+    "easymde": "^2.18.0",
     "encoding": "^0.1.13",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
