--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,7 +5,30 @@ repos:
     -   id: check-yaml
     -   id: end-of-file-fixer
     -   id: trailing-whitespace
+    - id: detect-private-key
+    - id: detect-aws-credentials
+      args: [ --allow-missing-credentials ]
+      exclude: "package.json|yarn.lock"
+    - id: mixed-line-ending
+    - id: check-merge-conflict
 -   repo: https://github.com/psf/black
     rev: 22.10.0
     hooks:
     -   id: black
+- repo: https://github.com/Lucas-C/pre-commit-hooks
+  rev: v1.4.2
+  hooks:
+    - id: remove-tabs
+    - id: remove-crlf
+- repo: local
+  hooks:
+    - id: yarn-lint
+      name: Linting Checks
+      pass_filenames: false
+      entry: "yarn lint"
+      language: system
+    - id: yarn-audit
+      name: Dependency Checks
+      pass_filenames: false
+      entry: "yarn audit"
+      language: system
