--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@aws-amplify/ui-react": "^5.2.0",
+    "@aws-amplify/adapter-nextjs": "^1.2.6",
+    "@aws-amplify/ui-react": "^6.1.12",
     "@aws-sdk/client-bedrock-runtime": "^3.602.0",
     "@tailwindcss/typography": "^0.5.9",
     "@types/node": "20.5.7",
@@ -17,13 +18,13 @@
     "@types/react-dom": "18.2.7",
     "@types/uuid": "^9.0.2",
     "autoprefixer": "10.4.15",
-    "aws-amplify": "^5.3.12",
+    "aws-amplify": "^6.3.8",
     "aws-crt": "^1.18.0",
     "easymde": "^2.18.0",
     "encoding": "^0.1.13",
     "eslint": "8.48.0",
-    "eslint-config-next": "13.4.19",
-    "next": "13.4.19",
+    "eslint-config-next": "14.1.1",
+    "next": "14.1.1",
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
