--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
 sonar.host.url=https://sonarcloud.io
 sonar.sources=src/
-sonar.exclusions=src/ui-components/**, src/API.ts
+sonar.exclusions=src/ui-components/**
 # sonar.tests=src/
 # sonar.test.inclusions=**/*.test.ts
