--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
     "uuid": "^10.0.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.4.6",
+    "@testing-library/react": "^16.0.0",
+    "@testing-library/user-event": "^14.5.2",
     "@types/jest": "^29.5.12",
     "@types/node": "20.14.9",
     "@types/react": "18.3.3",
@@ -39,6 +42,7 @@
     "eslint-config-next": "14.2.4",
     "eslint-plugin-jest": "^28.6.0",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "ts-jest": "^29.1.5"
   }
 }
