--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,4 +2,5 @@ sonar.host.url=https://sonarcloud.io
 sonar.sources=src/
 sonar.exclusions=src/ui-components/**,src/API.ts,amplify/**
 sonar.tests=src/
+sonar.javascript.lcov.reportPaths=./coverage/lcov.info
 # sonar.test.inclusions=**/*.test.ts
