4: configuring sonar to create coverage reports

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,3 +1,5 @@
+sonar.projectKey=KG700_blog-site
+sonar.organization=kg700
 sonar.host.url=https://sonarcloud.io
 sonar.sources=src/
 sonar.exclusions=src/ui-components/**,src/API.ts,amplify/**
