--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,6 +3,6 @@ sonar.organization=kg700
 sonar.host.url=https://sonarcloud.io
 sonar.sources=src/
 sonar.exclusions=src/ui-components/**,src/API.ts,amplify/**
-sonar.tests=src/
+# sonar.tests=src/
 sonar.javascript.lcov.reportPaths=./coverage/lcov.info
-# sonar.test.inclusions=**/*.test.ts
+sonar.test.inclusions=**/*.test.ts
