4: updated sonar configurations

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,5 +3,5 @@ sonar.organization=kg700
 sonar.host.url=https://sonarcloud.io
 sonar.sources=src/
 sonar.exclusions=src/ui-components/**,src/API.ts,amplify/**
-sonar.javascript.lcov.reportPaths=./coverage/lcov.info
+sonar.javascript.lcov.reportPaths=coverage/lcov.info
 sonar.test.inclusions=**/*.test.ts
