73: excluded aws exports from sonar coverage

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,7 +2,7 @@ sonar.projectKey=KG700_blog-site
 sonar.organization=kg700
 sonar.host.url=https://sonarcloud.io
 sonar.sources=src/
-sonar.exclusions=src/ui-components/**,src/API.ts,amplify/**
+sonar.exclusions=src/ui-components/**,src/API.ts,src/aws-exports.ts,amplify/**
 sonar.tests=src/
 sonar.test.inclusions=**/*.test.ts
 sonar.sourceEncoding=UTF-8
